deploy/k8s/base/calculation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esgame-calculation-service
  labels:
    app: esgame-calculation
spec:
  type: ClusterIP
  selector:
    app: esgame-calculation
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
